--- a/smacofAV/av.tex
+++ b/smacofAV/av.tex
@@ -273,7 +273,7 @@
 
 \title{Robust Least Squares Multidimensional Scaling}
 \author{Jan de Leeuw}
-\date{September 24, 2024}
+\date{September 25, 2024}
 
 \begin{document}
 \maketitle
@@ -366,27 +366,42 @@ Using the majorization \eqref{eq:amgmmaj}, and assuming
 \(\sigma_1(Y)=\omega_1(Y)\). Thus \(\omega_1\) majorizes \(\sigma_1\) at
 \(Y\).
 
-But what if for some \(k\) we have \(d_k(Y)=\delta_k\) ? Define
+\subsection{Algorithm}\label{algorithm}
+
+Define \begin{equation}
+w_k(Y):=w_k\frac{1}{|\delta_k-d_k(Y)|}.\label{eq:wk1def}
+\end{equation} Reweighted smacof to minimize strife computes
+\(X^{(k+1)}\) by decreasing \begin{equation}
+\sum w_k(X^{(k)})(\delta_k-d_k(X^{(k)}))^2,\label{eq:sstrf}
+\end{equation} using a standard smacof step. It then computes the new
+weights \(w_k(X^{(k+1)})\) from \eqref{eq:wk1def} and uses them in the
+next smacof step to update \(X^{(k+1)}\). And so on, until convergence.
+
+A straightforward variation of the algorithm does a number of smacof
+steps before upgrading the weights. This still leads to a monotone, and
+thus convergent, algorithm. How many smacof steps we have to take in the
+inner iterations is something that needs further study. It is likely to
+depend on the fit of the data, on the shape of the function near the
+local minimum, and on how far the iterations are from the local minimum.
+
+\subsection{Zero Residuals}\label{zero-residuals}
+
+It may happen that for some \(k\) we have \(d_k(X^{(k)})=\delta_k\)
+while iterating. There have been various proposals to deal with this
+unfortunate event, but as far as I can see none of them have been
+entirely satisfactory.
+
 \begin{equation}
-\begin{subequations}
-s_k(Y)=\begin{cases}
+w_k(Y)=\begin{cases}
 w_k\frac{1}{|\delta_k-d_k(Y)|}&\text{ if }d_k(Y)\not =\delta_k,\\
 2\ \max_k w_k&\text{ otherwise}.\label{eq:sdef}
 \end{cases}
-\end{subequations}
 \end{equation} Redefine \(\omega_1\) as \begin{equation}
-\omega_1(X):=\frac12\sum s_k(Y)\{(\delta_k-d_k(Y))^2+(\delta_k-d_k(X))^2\}.\label{eq:ommaj}
+\omega_1(X):=\frac12\sum w_k(Y)\{(\delta_k-d_k(Y))^2+(\delta_k-d_k(X))^2\}.\label{eq:ommaj}
 \end{equation} This modified \(\omega_1\) majorizes \(\sigma_1\) at
-\(Y\), even in the case that \(\delta_k=d_k(Y)\) for all \(k\).
+\(Y\), even in the perverse case that \(\delta_k=d_k(Y)\) for all \(k\).
 
-Reweighted smacof to minimize strife computes \(X^{(k+1)}\) by
-decreasing \begin{equation}
-\sum s_k(X^{(k)})(\delta_k-d_k(X^{(k)}))^2,\label{eq:sstrf}
-\end{equation} using a standard smacof step. It then computes the new
-weights \(s_k(X^{(k+1)})\) and uses them in the next smacof step to
-update \(X^{(k+1)}\). And so on, until convergence.
-
-To illustrate the problems with differentability we compute the
+To illustrate the problems with differentiability we compute the
 directional derivatives of strife.
 
 Let \(s_k(X):=w_k|d_k(X)-\delta_k|\).
@@ -412,13 +427,38 @@ Let \(s_k(X):=w_k|d_k(X)-\delta_k|\).
 The directional derivative of \(\sigma_1\) is consequently the sum of
 five terms, corresponding with each of these five cases.
 
-In the case of \(\sigma_2\) the directional derivatives could be used to
-prove that if \(w_k\delta_k>0\) for all \(k\) stress then is
-differentiable at each local minimum (De Leeuw
-(\citeproc{ref-deleeuw_A_84f}{1984})). For strife to be differentiable
-we would have to prove that at a local minimum both \(d_k(X)>0\) and
-\((d_k(X)-\delta_k)\not= 0\). So far I have no proof and no counter
-example, but it's early in the game.
+In the case of stress the directional derivatives could be used to prove
+that if \(w_k\delta_k>0\) for all \(k\) then stress is differentiable at
+each local minimum (De Leeuw (\citeproc{ref-deleeuw_A_84f}{1984})). For
+strife to be differentiable we would have to prove that at a local
+minimum both \(d_k(X)>0\) and \((d_k(X)-\delta_k)\not= 0\). for all
+\(k\) with \(w_k>0\).
+
+But this is impossible by the following argument. In the one-dimensional
+case we can partition \(\mathbb{R}^n\) into \(n!\) polyhedral convex
+cones corresponding with the permutations of \(x\). Within each cone the
+distances are a linear function of \(x\). Each cone can be partitioned
+by intersecting it with the \(2^\binom{n}{2}\) polyhedra defined by the
+inequalities \(\delta_k-d_k(x)\geq 0\) or \(\delta_k-d_k(x)\leq 0\).
+Some of these intersections can and will obviously be empty. Within each
+of the non-empty polyhedral intersections strife is a linear function of
+\(x\). Thus it attains its minimum at a vertex of the intersection,
+which is a solution for which some distances are zero and some residuals
+are zero. There can be no\\
+minima, local or global, in the interior of a polyhedral intersection.
+Of course the number of regions, which is maximally
+\(n!2^\binom{n}{2}\), is too large to actually compute or draw, except
+perhaps when \(n=3\), in which case there are maximally 48 of them. Thus
+we have shown that in one dimension strife is not differentiable at a
+local minimum, and that there is presumably a large number of them.
+
+In the multidimensional case linearity goes out the window. The set of
+configurations \(d_k(X)=\delta_k\) is an ellipsoid and \(d_k(X)=0\) is a
+hyperplane. Strife is not differentiable at all intersections of these
+ellipsoids and hyperplanes. The partitioning of \(\mathbb{R}^n\) by
+these ellipsoids and hyperplanes is not simple to describe. It has
+convex and non-convex cells, and within each cell strife is the
+difference of two weighted sums of distances. Anything can happen.
 
 \sectionbreak
 
@@ -441,13 +481,26 @@ and Lange (\citeproc{ref-deleeuw_lange_A_09}{2009}). Their Theorem 4.5
 on page 2478 says
 
 \begin{quote}
-Theorem: Suppose \(f(x)\) is an even, differentiable function on
+Theorem 4.5: Suppose \(f(x)\) is an even, differentiable function on
 \(\mathbb{R}\) such that the ratio \(f'(x)/x\) is non-increasing on
 \((0,\infty)\). Then the even quadratic \begin{equation}
 g(x)=\frac{f'(y)}{2y}(x^2-y^2)+f(y)\label{eq:sharp}
 \end{equation} is a sharp quadratic majorizer of \(f\) at the point
 \(y\).
 \end{quote}
+
+\begin{quote}
+Theorem 4.6. The ratio \(f'(x)/x\) is decreasing on \((0,\infty)\) if
+and only \(f(\sqrt(x))\) is concave. The set of functions satisfying
+this condition is closed under the formation of (a) positive multiples,
+(b) convex combinations, (c) limits, and (d) composition with a concave
+increasing function \(g(x)\).
+\end{quote}
+
+Note that these theorems only give a sufficient condition for quadratic
+majorization (in fact, for sharp quadratic majorization). Also note that
+if \(f\) is differentiable, even, and convex then it has its minimum at
+zero.
 
 We now apply this theorem to functions of the form \begin{equation}
 \sigma_f(X):=\sum w_k\ f(\delta_k-d_k(X)),\label{eq:fstressdef}
@@ -457,8 +510,8 @@ We now apply this theorem to functions of the form \begin{equation}
 \end{equation} then \(\omega_f\) is a sharp quadratic majorization at
 \(Y\).
 
-Although the absolute value is not differentiable at the origin the
-theorem can still be applied. It just does not give a majorizer at
+Shift: Although the absolute value is not differentiable at the origin
+the theorem can still be applied. It just does not give a majorizer at
 \(y=0\). If \(f(x)=|x|\) then \begin{equation}
 g(x)=\frac{1}{2|y|}(x^2-y^2)+|y|=\frac{1}{2|y|}(x^2+y^2),label{eq:abssharp}
 \end{equation} which is the same as \eqref{eq:amgmmaj}. Thus the AM/GM
@@ -477,17 +530,11 @@ reweighted least squares, and also as majorization within majorization,
 with the smacof majorization within the sharp quadratic majorization of
 the loss function.
 
-A straightforward variation of the algorithm does a number of smacof
-steps before upgrading the weights. This still leads to a monotone, and
-thus convergent, algorithm. How many smacof steps we have to take in the
-inner iterations is something that needs further study. It is likely to
-depend on the fit of the data, on the shape of the function near the
-local minimum, and on how far the iterations are from the local minimum.
+A
 
 \sectionbreak
 
-\section{Pseudo-Huber Loss, Charbonnier
-loss}\label{pseudo-huber-loss-charbonnier-loss}
+\section{Charbonnier loss}\label{charbonnier-loss}
 
 De Leeuw (\citeproc{ref-deleeuw_E_18f}{2018})
 
@@ -511,7 +558,7 @@ f'(x)=\frac{1}{\sqrt{x^2+c^2}}x
 \sigma_\epsilon(X)=\epsilon^2\left\{\sqrt{1+\frac{x^2}{\epsilon^2}}-1\right\}
 \] \sectionbreak
 
-\section{Robustifying - Huber Loss}\label{robustifying---huber-loss}
+\section{Huber Loss}\label{huber-loss}
 
 The Huber function (Huber (\citeproc{ref-huber_64}{1964})) is \[
 f(x)=\begin{cases}
@@ -527,9 +574,14 @@ c&\text{ if }x\geq c,\\
 x&\text{ if }|x|\leq c,\\
 -c&\text{ if }x\leq -c.
 \end{cases}
-\]
-
-The Huber function is even and differentiable. Moreover \(f'(x)/x\)
+\] \[
+w(x)=
+\begin{cases}
+\frac{c}{x}&\text{ if }x\geq c,\\
+1&\text{ if }|x|\leq c,\\
+-\frac{c}{x}&\text{ if }x\leq -c.
+\end{cases}
+\] The Huber function is even and differentiable. Moreover \(f'(x)/x\)
 decreases from. Thus the theorem applies and the sharp quadratic
 majorizer at \(y\) is \[
 g(x)=\begin{cases}
@@ -565,27 +617,9 @@ w_k(Y)=\begin{cases}
 w_k&\text{ if }|\delta_k-d_k(Y)|<c,\\
 \frac{cw_k}{|\delta_k-d_k(Y)|}&\text{ otherwise}.
 \end{cases}
-\] \sectionbreak
+\]
 
-\section{Tukey biweight}\label{tukey-biweight}
-
-\[
-f(x)=\begin{cases}
-\frac{c^2}{6}\left(1-\left[1-(\frac{x}{c})^2\right]^3\right)&\text{ if }|x|\leq c,\\
-\frac{c^2}{6}&\text{ otherwise }.
-\end{cases}
-\] \[
-f'(x)=\begin{cases}
-x\left[1-(\frac{x}{c})^2\right]^2&\text{ if }|x|\leq c,\\
-0&\text{ otherwise }.
-\end{cases}
-\] It is easy to see that \(f'(x)/x\) is non-increasing on
-\((0,+\infty)\). \[
-w_k(Y)=\begin{cases}
-\frac12w_k\left[1-(\frac{\delta_k-d_k(Y)}{c})^2\right]^2&\text{ if }|\delta_k-d_k(Y)|<c,\\
-0&\text{ otherwise}.
-\end{cases}
-\] \sectionbreak
+\sectionbreak
 
 \section{Convolution}\label{convolution}
 
@@ -629,30 +663,52 @@ proof.
 \[
 w_k(Y)=
 \frac{\Phi((\delta_k-d_k(Y))/c)-\frac12}{\delta_k-d_k(Y)}\\
-\] \sectionbreak
+\]
+
+Convolution with rectangular between c and -c gives the Huber function.
+\[
+f(x)=\frac{1}{2c}\int_{-c}^{+c}|x-y|dy
+\] \[
+f(x)=\frac{1}{2c}\int_{-c}^{+c}|x-y|dy=\begin{cases}
+\frac{1}{2c}(x^2+c^2)&\text{ if }|x|\leq c,\\
+|x|&\text{ otherwise}.
+\end{cases}
+\] \[
+f'(x)=\begin{cases}
+\frac{1}{c}x&\text{ if }|x|\leq c,\\
+\text{sign}(x)&\text{ otherwise}.
+\end{cases}
+\] \[
+w(x)=\begin{cases}
+\frac{1}{c}&\text{ if }|x|\leq c,\\
+\frac{1}{|x|}&\text{ otherwise}.
+\end{cases}
+\]
+
+\sectionbreak
 
 \section{Barron Loss}\label{barron-loss}
 
 Not surprisingly there are a large number of generalizations of
 Huber-like losses in the engineering community, and in their maze of
 conference publications. Without having any confidence of selecting a
-representative sample from the literature, we mention Barron
-(\citeproc{ref-barron_17}{2017}), Barron
-(\citeproc{ref-barron_19}{2019}), Gokcesu and Gokcesu
-(\citeproc{ref-gokcesu_gokcesu_21}{2021}), Gokcesu and Gokcesu
-(\citeproc{ref-gokcesu_gokcesu_22}{2022}). These papers also give a
-large number of possibly useful references.
+representative sample from the literature, we mention and discuss Barron
+(\citeproc{ref-barron_17}{2017}) and Barron
+(\citeproc{ref-barron_19}{2019}). These papers also give a large number
+of possibly useful references.
 
-It is also clear that we can use any location-scale family of
-probability densities to define convolution smoothers. There is an
-infinite number of possible choices, with finite or infinite support,
-smooth or nonsmooth, using splines or wavelets, and so on.
+It is also clear that we can use any scale family of probability
+densities to define convolution smoothers. There is an infinite number
+of possible choices, with finite or infinite support, smooth or
+nonsmooth, using splines or wavelets, and so on.
 
 \section{Example}\label{example}
 
 \section{Discussion}\label{discussion}
 
 Fixed weights
+
+Tukey loss
 
 \section{Code}\label{code}
 
@@ -795,16 +851,6 @@ Lenski, and M. M. Richter, 308--24. Berlin: Springer Verlag.
 De Leeuw, J., and K. Lange. 2009. {``Sharp Quadratic Majorization in One
 Dimension.''} \emph{Computational Statistics and Data Analysis} 53:
 2471--84.
-
-\bibitem[\citeproctext]{ref-gokcesu_gokcesu_21}
-Gokcesu, K., and H. Gokcesu. 2021. {``Generalized Huber Loss for Robust
-Learning and Its Efficient Minimization for a Robust Statistics.''}
-\url{https://arxiv.org/abs/2108.12627}.
-
-\bibitem[\citeproctext]{ref-gokcesu_gokcesu_22}
----------. 2022. {``Nonconvex Extension of Generalized Huber Loss for
-Robust Learning and Pseudo-Mode Statistics.''} arXiv:2202.11141v1
-{[}stat.ML{]}. \url{https://arxiv.org/abs/2202.11141}.
 
 \bibitem[\citeproctext]{ref-groenen_heiser_meulman_99}
 Groenen, P. J. F., W. J. Heiser, and J. J. Meulman. 1999. {``{Global
