--- a/smacofAV/av.qmd
+++ b/smacofAV/av.qmd
@@ -191,21 +191,11 @@ How many smacof steps we have to take in the inner iterations is something that 
 ## Zero Residuals
 
 It may happen that for some $k$ we have $d_k(X^{(k)})=\delta_k$ while iterating. There have been various proposals to deal with such an 
-unfortunate event, but as far as I can see none of them have been
-entirely satisfactory. 
-
-As easy one is
-\begin{equation}
-w_k(Y)=\begin{cases}
-w_k\frac{1}{|\delta_k-d_k(Y)|}&\text{ if }d_k(Y)\not =\delta_k,\\
-2\ \max_k w_k&\text{ otherwise}.\label{eq:sdef}
-\end{cases}
-\end{equation}
-Redefine $\omega_1$ as
-\begin{equation}
-\omega_1(X):=\frac12\sum w_k(Y)\{(\delta_k-d_k(Y))^2+(\delta_k-d_k(X))^2\}.\label{eq:ommaj}
-\end{equation}
-This modified $\omega_1$ majorizes $\sigma_1$ at $Y$, even in the perverse case that $\delta_k=d_k(Y)$ for all $k$. But ...
+unfortunate event, and we will discuss some of them further on. Even more
+importantly we will see that that the minimizer of the absolute value
+loss usually satisfies $d_k(X)=\delta_k$ for quite a few elements,
+which means that near convergence the algorithm will become unstable
+because the weights from \eqref{eq:wk1def} become very large. 
 
 To illustrate the problems with differentiability we compute the directional derivatives of strife. 
 
@@ -242,18 +232,13 @@ ellipsoids and hyperplanes is not simple to describe. It has convex
 and non-convex cells, and within each cell strife is the difference
 of two weighted sums of distances. Anything can happen.
 
-
-
-
-
 \sectionbreak
 
 # Generalizing Strife
 
-To fix the terminology we say that a function $g$
+A function $g$
 *majorizes* a function $f$ at $y$ if $g(x)\geq f(x)$ for all $x$ and $g(y)=f(y)$.
-Majorization is *strict* if $g(x)>f(x)$ for all $x\not= y$. If $\mathfrak{H}$ is a family of functions that all majorize $f$ at $y$ then $h\in\mathfrak{H}$ is *sharp* if
-$h(x)\leq g(x)$ for all $g\in\mathfrak{H}$. 
+Majorization is *strict* if $g(x)>f(x)$ for all $x\not= y$. If $\mathfrak{H}$ is a family of functions that all majorize $f$ at $y$ then $h\in\mathfrak{H}$ is a *sharp majorization* if $h(x)\leq g(x)$ for all $g\in\mathfrak{H}$. 
 The AM/GM inequality was used in the previous section to construct a quadratic majorization of strife. 
 
 We are specifically interested in this chapter in sharp quadratic majorization, in
@@ -272,9 +257,7 @@ is a sharp quadratic majorizer of $f$ at the point $y$.
 $f(\sqrt(x))$ is concave. The set of functions satisfying this condition is closed under the formation of (a) positive multiples, (b) convex combinations, (c) limits, and (d) composition with a concave increasing function $g(x)$.
 
 Note that these theorems only give a sufficient condition for quadratic
-majorization (in fact, for sharp quadratic majorization). Also note
-that if $f$ is differentiable, even, and convex then it has its minimum
-at zero.
+majorization (in fact, for sharp quadratic majorization). 
 
 We now apply this theorem to functions of the form
 \begin{equation}
@@ -303,48 +286,94 @@ with
 \begin{equation}
 w_k(X^{(k)}):=w_k\frac{f'(\delta_k-d_k(X^{(k)}))}{2(\delta_k-d_k(Y))}.\label{eq:wkdef}
 \end{equation}
-It then recomputes the weights $w_k(X^{(k+1)})$ and goes to the smacof step again. This can be thought of as iteratively reweighted least squares, and also as majorization within majorization, with the smacof majorization within the sharp quadratic majorization of the loss function.
+It then recomputes the weights $w_k(X^{(k+1)})$ and goes to the smacof step again. This can be thought of as iteratively reweighted least squares (IRLS), and also as nested majorization, with the smacof majorization within the sharp quadratic majorization of the loss function.
 
 \sectionbreak
 
 # On IRLS
 
+The history of iterative reweighted least squares (IRLS), as applied to
+fitting functions to data, is rather complicated. It is mostly used in
+fitting linear models, and in minimizing $\ell_p$ power loss. 
+
+Weiszfeld
+
 \sectionbreak
 
 # Charbonnier loss
 
-@deleeuw_E_18f, @ramirez_sanchez_kreinovich_argaez_14
+
+The first, and perhaps most obvious, choice for smoothing the absolute
+value function is
+\begin{equation}
+f_c(x)=\sqrt{x^2 + c^2}.\label{eq:chardonnier}
+\end{equation}
+This smoother was previously used by @deleeuw_E_18f in least absolute value regression and in @deleeuw_E_20b in what was called least squares absolute value regression.
+
+In the figure below we show the loss function for $c=1$ (black), $c=0.1$ (red),
+$c=0.01$ (blue), and $c=0.001$ (green).
+
+```{r charfig, fig.align = "center", echo = FALSE, fig.cap = "Chardonnier Loss", fig.dim = c(6, 6)}
+par(pty = "s")
+curve(sqrt(x^2 + 1), from = -3, to = 3, ylab = "f", ylim = c(0, 4))
+curve(sqrt(x^2 + 0.1), from = -3, to = 3, add = TRUE, col = "RED", ylab = "f", ylim = c(0, 4))
+curve(sqrt(x^2 + 0.01), from = -3, to = 3, add = TRUE, col = "BLUE", ylab = "f", ylim = c(0, 4))
+curve(sqrt(x^2 + 0.001), from = -3, to = 3, add = TRUE, col = "GREEN", ylab = "f", ylim = c(0, 4))
+```
+
+For $c>0$ we have $f_c(x)>|x|$.
+If $c\rightarrow 0$ then  $f_c(x)$ decreases monotonically to $|x|$. Also $\min_x|f_c(x)-|x||=c$ attained at $x=0$, which implies
+uniform convergence of $f_c$ to $|x|$.
+
+
+
+In the engineering literature \eqref{eq:chardonnier} is known as Charbonnier loss, after @charbonnier_blanc-feraud_aubert_barlaud_94, who were possibly
+the first engineers to use it. x
+@ramirez_sanchez_kreinovich_argaez_14 argue \eqref{eq:chardonnier} is also the "most computationally efficient smooth approximation to $|x|$".
+
+By l'Hôpital
+$$
+\lim_{x\rightarrow 0}\frac{\sqrt{x^2+c^2}-c}{\frac12x^2}=1.
+$$
+Of course also
+$$
+\lim_{x\rightarrow\infty}\frac{\sqrt{x^2+c^2}}{|x|}=1
+$$
+and
+$$
+\lim_{x\rightarrow\pm\infty}\sqrt{x^2+c^2}-|x|=0
+$$
+Thus if $x$ is much smaller than $c$ loss is approximately a quadratic in $x$, 
+and if $x$ is much larger than $c$ then loss is approximately the
+absolute value. 
+
+Loss function \eqref{eq:chardonnier} is infinitely many times differentiable. Its first
+derivative is
+$$
+f'_c(x)=\frac{1}{\sqrt{x^2+c^2}}x,
+$$
+which converges, again in the sup-norm and uniformly, to the sign function if $c\rightarrow 0$. The IRLS weights are
 
 $$
-f(x)=\sqrt{x^2 + c^2}
+w_c(x)=\frac{1}{\sqrt{x^2+c^2}}
 $$
-$$
-f(x)=c\ \sqrt{1+(\frac{x}{c})^2}
-$$
-$$
-f'(x)=\frac{1}{\sqrt{x^2+c^2}}x
-$$
+which is clearly a decreasing function of $x$ on $\mathbb{R}^+$.
+
 
 $$
-\frac{f'(x)}{x}=\frac{1}{\sqrt{x^2+c^2}}
-$$
-which is decreasing.
-$$
-\sigma_\epsilon(X):=\sum w_k\sqrt{(\delta_k-d_k(X))^2+\epsilon^2}
+\sigma_c(X):=\sum w_k\sqrt{(\delta_k-d_k(X))^2+c^2}
 $$
 Now majorization using
 $$
-\sqrt{(\delta_k-d_k(X))^2+\epsilon^2}\leq\frac12\frac{1}{\sqrt{(\delta_k-d_k(Y))^2+\epsilon^2}}\{(\delta_k-d_k(X))^2+(\delta_k-d_k(Y))^2+2\epsilon^2\}
+\omega(X,X^{(k)}):=\sum w_kw_c(\delta_k-d_k(X^{(k)})(\delta_k-d_k(X))^2
 $$
-Alt: 
 
-$$
-\sigma_\epsilon(X)=\epsilon^2\left\{\sqrt{1+\frac{x^2}{\epsilon^2}}-1\right\}
-$$
 
 \sectionbreak
 
 # Generalized Charbonnier Loss
+
+
 
 $$
 f(x):=(x^2+c^2)^q
@@ -358,11 +387,30 @@ $$
 which is non-increasing for $q\leq 1$.
 
 
-Barron Loss
+Not surprisingly there are a large number of generalizations
+of Huber-like losses in the engineering community, and in their
+maze of conference publications. Without having any confidence
+of selecting a representative sample from the literature, we mention
+and discuss @barron_17 and @barron_19. These papers also give a number of  useful references. 
+
+$$
+f_{\alpha,c}(x)=\frac{|\alpha-2|}{\alpha}\left(\left(\frac{(x/c)^2}{|\alpha-2|}+1\right)^{\alpha/2}-1\right)
+$$
 
 \sectionbreak
 
 # Huber Loss
+
+
+
+\sectionbreak
+
+
+# Convolution Smoothers
+
+General
+
+## Huber Loss
 
 The Huber function (@huber_64) is 
 $$
@@ -371,6 +419,9 @@ f(x)=\begin{cases}
 c|x|-\frac12 c^2&\text{ otherwise}.
 \end{cases}
 $$
+
+Because ... Chardonnier loss is also known
+as Pseudo-Huber loss.
 
 The Huber function is differentiable, although not twice diffentiable. Its derivative is
 $$
@@ -432,12 +483,9 @@ w_k&\text{ if }|\delta_k-d_k(Y)|<c,\\
 \end{cases}
 $$
 
-\sectionbreak
+## Gaussian Convolution
 
-
-# Convolution
-
-In @deleeuw_E_18f we also study the
+In @deleeuw_E_18f we also used the
 convolution smoother proposed by @voronin_ozkaya_yoshida_15. The idea is
 to use the convolution of the absolute value
 function and a *mollifier* as the smoothed
@@ -496,16 +544,27 @@ w(x)=\begin{cases}
 \end{cases}
 $$
 
+It is also clear that we can use any scale family of
+probability densities to define convolution smoothers. There is an infinite number of possible choices, with finite or infinite support, smooth or nonsmooth, using splines or wavelets, and so on.
+
 \sectionbreak
 
-# Tukey Loss
+## Downweighters
 
-# Welsch Loss
+
+## Tukey Loss
+
+## Welsch Loss
 
 $$
 f(x)=1-\exp(-\{\frac{x}{c}\}^2)
 $$
-# Cauchy Loss
+
+$$
+f'(x)=\frac{2}{c^2}\exp(-\{\frac{x}{c}\}^2)x
+$$
+
+## Cauchy Loss
 
 $$
 f(x)=\log(\{\frac{x}{c}\}^2+1)
@@ -518,17 +577,6 @@ $$
 w(x)=\frac{1}{c^2}\frac{1}{\{\frac{x}{c}\}^2+1}
 $$
 which is non-increasing on $\mathbb{R}^+$.
-
-# Barron Loss
-
-Not surprisingly there are a large number of generalizations
-of Huber-like losses in the engineering community, and in their
-maze of conference publications. Without having any confidence
-of selecting a representative sample from the literature, we mention
-and discuss @barron_17 and @barron_19. These papers also give a number of  useful references. 
-
-It is also clear that we can use any scale family of
-probability densities to define convolution smoothers. There is an infinite number of possible choices, with finite or infinite support, smooth or nonsmooth, using splines or wavelets, and so on.
 
 # Example
 
@@ -607,6 +655,20 @@ abline(0, 1, col = "BLUE")
 Fixed weights
 
 Tukey loss
+
+Minimize
+$$
+\sum w_k\ f(\delta_k-d_k(X))
+$$
+if $f''(x)\leq K$.
+
+$$
+f(\delta_k-d_k(X))\leq f(\delta_k-d_k(Y))+f'(\delta_k-d_k(Y))(d_k(Y)-d_k(X))+\frac12K(d_k(Y)-d_k(X))^2
+$$
+Minimize
+$$
+\left[d_k(X)-\{d_k(Y))-K^{-1}f'(\delta_k-d_k(Y))\}\right]^2
+$$
 
 # Code
 
