--- a/smacofAV/av.tex
+++ b/smacofAV/av.tex
@@ -273,7 +273,7 @@
 
 \title{Robust Least Squares Multidimensional Scaling}
 \author{Jan de Leeuw}
-\date{September 29, 2024}
+\date{October 1, 2024}
 
 \begin{document}
 \maketitle
@@ -394,19 +394,11 @@ local minimum, and on how far the iterations are from the local minimum.
 
 It may happen that for some \(k\) we have \(d_k(X^{(k)})=\delta_k\)
 while iterating. There have been various proposals to deal with such an
-unfortunate event, but as far as I can see none of them have been
-entirely satisfactory.
-
-As easy one is \begin{equation}
-w_k(Y)=\begin{cases}
-w_k\frac{1}{|\delta_k-d_k(Y)|}&\text{ if }d_k(Y)\not =\delta_k,\\
-2\ \max_k w_k&\text{ otherwise}.\label{eq:sdef}
-\end{cases}
-\end{equation} Redefine \(\omega_1\) as \begin{equation}
-\omega_1(X):=\frac12\sum w_k(Y)\{(\delta_k-d_k(Y))^2+(\delta_k-d_k(X))^2\}.\label{eq:ommaj}
-\end{equation} This modified \(\omega_1\) majorizes \(\sigma_1\) at
-\(Y\), even in the perverse case that \(\delta_k=d_k(Y)\) for all \(k\).
-But \ldots{}
+unfortunate event, and we will discuss some of them further on. Even
+more importantly we will see that that the minimizer of the absolute
+value loss usually satisfies \(d_k(X)=\delta_k\) for quite a few
+elements, which means that near convergence the algorithm will become
+unstable because the weights from \eqref{eq:wk1def} become very large.
 
 To illustrate the problems with differentiability we compute the
 directional derivatives of strife.
@@ -471,14 +463,13 @@ difference of two weighted sums of distances. Anything can happen.
 
 \section{Generalizing Strife}\label{generalizing-strife}
 
-To fix the terminology we say that a function \(g\) \emph{majorizes} a
-function \(f\) at \(y\) if \(g(x)\geq f(x)\) for all \(x\) and
-\(g(y)=f(y)\). Majorization is \emph{strict} if \(g(x)>f(x)\) for all
-\(x\not= y\). If \(\mathfrak{H}\) is a family of functions that all
-majorize \(f\) at \(y\) then \(h\in\mathfrak{H}\) is \emph{sharp} if
-\(h(x)\leq g(x)\) for all \(g\in\mathfrak{H}\). The AM/GM inequality was
-used in the previous section to construct a quadratic majorization of
-strife.
+A function \(g\) \emph{majorizes} a function \(f\) at \(y\) if
+\(g(x)\geq f(x)\) for all \(x\) and \(g(y)=f(y)\). Majorization is
+\emph{strict} if \(g(x)>f(x)\) for all \(x\not= y\). If \(\mathfrak{H}\)
+is a family of functions that all majorize \(f\) at \(y\) then
+\(h\in\mathfrak{H}\) is a \emph{sharp majorization} if \(h(x)\leq g(x)\)
+for all \(g\in\mathfrak{H}\). The AM/GM inequality was used in the
+previous section to construct a quadratic majorization of strife.
 
 We are specifically interested in this chapter in sharp quadratic
 majorization, in which \(\mathfrak{H}\) is the set of all convex
@@ -505,9 +496,7 @@ increasing function \(g(x)\).
 \end{quote}
 
 Note that these theorems only give a sufficient condition for quadratic
-majorization (in fact, for sharp quadratic majorization). Also note that
-if \(f\) is differentiable, even, and convex then it has its minimum at
-zero.
+majorization (in fact, for sharp quadratic majorization).
 
 We now apply this theorem to functions of the form \begin{equation}
 \sigma_f(X):=\sum w_k\ f(\delta_k-d_k(X)),\label{eq:fstressdef}
@@ -533,39 +522,82 @@ of \eqref{eq:fstressmaj} that only depend on \(Y\), and minimize
 w_k(X^{(k)}):=w_k\frac{f'(\delta_k-d_k(X^{(k)}))}{2(\delta_k-d_k(Y))}.\label{eq:wkdef}
 \end{equation} It then recomputes the weights \(w_k(X^{(k+1)})\) and
 goes to the smacof step again. This can be thought of as iteratively
-reweighted least squares, and also as majorization within majorization,
-with the smacof majorization within the sharp quadratic majorization of
-the loss function.
+reweighted least squares (IRLS), and also as nested majorization, with
+the smacof majorization within the sharp quadratic majorization of the
+loss function.
 
 \sectionbreak
 
 \section{On IRLS}\label{on-irls}
 
+The history of iterative reweighted least squares (IRLS), as applied to
+fitting functions to data, is rather complicated. It is mostly used in
+fitting linear models, and in minimizing \(\ell_p\) power loss.
+
+Weiszfeld
+
 \sectionbreak
 
 \section{Charbonnier loss}\label{charbonnier-loss}
 
-De Leeuw (\citeproc{ref-deleeuw_E_18f}{2018}), Ramirez et al.
-(\citeproc{ref-ramirez_sanchez_kreinovich_argaez_14}{2014})
+The first, and perhaps most obvious, choice for smoothing the absolute
+value function is \begin{equation}
+f_c(x)=\sqrt{x^2 + c^2}.\label{eq:chardonnier}
+\end{equation} This smoother was previously used by De Leeuw
+(\citeproc{ref-deleeuw_E_18f}{2018}) in least absolute value regression
+and in De Leeuw (\citeproc{ref-deleeuw_E_20b}{2020}) in what was called
+least squares absolute value regression.
+
+In the figure below we show the loss function for \(c=1\) (black),
+\(c=0.1\) (red), \(c=0.01\) (blue), and \(c=0.001\) (green).
+
+\begin{figure}[H]
+
+{\centering \includegraphics{av_files/figure-pdf/charfig-1.pdf}
+
+}
+
+\caption{Chardonnier Loss}
+
+\end{figure}%
+
+For \(c>0\) we have \(f_c(x)>|x|\). If \(c\rightarrow 0\) then
+\(f_c(x)\) decreases monotonically to \(|x|\). Also
+\(\min_x|f_c(x)-|x||=c\) attained at \(x=0\), which implies uniform
+convergence of \(f_c\) to \(|x|\).
+
+In the engineering literature \eqref{eq:chardonnier} is known as
+Charbonnier loss, after Charbonnier et al.
+(\citeproc{ref-charbonnier_blanc-feraud_aubert_barlaud_94}{1994}), who
+were possibly the first engineers to use it. x Ramirez et al.
+(\citeproc{ref-ramirez_sanchez_kreinovich_argaez_14}{2014}) argue
+\eqref{eq:chardonnier} is also the ``most computationally efficient
+smooth approximation to \(|x|\)''.
+
+By l'Hôpital \[
+\lim_{x\rightarrow 0}\frac{\sqrt{x^2+c^2}-c}{\frac12x^2}=1.
+\] Of course also \[
+\lim_{x\rightarrow\infty}\frac{\sqrt{x^2+c^2}}{|x|}=1
+\] and \[
+\lim_{x\rightarrow\pm\infty}\sqrt{x^2+c^2}-|x|=0
+\] Thus if \(x\) is much smaller than \(c\) loss is approximately a
+quadratic in \(x\), and if \(x\) is much larger than \(c\) then loss is
+approximately the absolute value.
+
+Loss function \eqref{eq:chardonnier} is infinitely many times
+differentiable. Its first derivative is \[
+f'_c(x)=\frac{1}{\sqrt{x^2+c^2}}x,
+\] which converges, again in the sup-norm and uniformly, to the sign
+function if \(c\rightarrow 0\). The IRLS weights are
 
 \[
-f(x)=\sqrt{x^2 + c^2}
-\] \[
-f(x)=c\ \sqrt{1+(\frac{x}{c})^2}
-\] \[
-f'(x)=\frac{1}{\sqrt{x^2+c^2}}x
-\]
+w_c(x)=\frac{1}{\sqrt{x^2+c^2}}
+\] which is clearly a decreasing function of \(x\) on \(\mathbb{R}^+\).
 
 \[
-\frac{f'(x)}{x}=\frac{1}{\sqrt{x^2+c^2}}
-\] which is decreasing. \[
-\sigma_\epsilon(X):=\sum w_k\sqrt{(\delta_k-d_k(X))^2+\epsilon^2}
+\sigma_c(X):=\sum w_k\sqrt{(\delta_k-d_k(X))^2+c^2}
 \] Now majorization using \[
-\sqrt{(\delta_k-d_k(X))^2+\epsilon^2}\leq\frac12\frac{1}{\sqrt{(\delta_k-d_k(Y))^2+\epsilon^2}}\{(\delta_k-d_k(X))^2+(\delta_k-d_k(Y))^2+2\epsilon^2\}
-\] Alt:
-
-\[
-\sigma_\epsilon(X)=\epsilon^2\left\{\sqrt{1+\frac{x^2}{\epsilon^2}}-1\right\}
+\omega(X,X^{(k)}):=\sum w_kw_c(\delta_k-d_k(X^{(k)})(\delta_k-d_k(X))^2
 \]
 
 \sectionbreak
@@ -581,11 +613,29 @@ f'(x)=2qx(x^2+c^2)^{q-1}
 w(x)=2q(x^2+c^2)^{q-1}
 \] which is non-increasing for \(q\leq 1\).
 
-Barron Loss
+Not surprisingly there are a large number of generalizations of
+Huber-like losses in the engineering community, and in their maze of
+conference publications. Without having any confidence of selecting a
+representative sample from the literature, we mention and discuss Barron
+(\citeproc{ref-barron_17}{2017}) and Barron
+(\citeproc{ref-barron_19}{2019}). These papers also give a number of
+useful references.
+
+\[
+f_{\alpha,c}(x)=\frac{|\alpha-2|}{\alpha}\left(\left(\frac{(x/c)^2}{|\alpha-2|}+1\right)^{\alpha/2}-1\right)
+\]
 
 \sectionbreak
 
 \section{Huber Loss}\label{huber-loss}
+
+\sectionbreak
+
+\section{Convolution Smoothers}\label{convolution-smoothers}
+
+General
+
+\subsection{Huber Loss}\label{huber-loss-1}
 
 The Huber function (Huber (\citeproc{ref-huber_64}{1964})) is \[
 f(x)=\begin{cases}
@@ -593,6 +643,8 @@ f(x)=\begin{cases}
 c|x|-\frac12 c^2&\text{ otherwise}.
 \end{cases}
 \]
+
+Because \ldots{} Chardonnier loss is also known as Pseudo-Huber loss.
 
 The Huber function is differentiable, although not twice diffentiable.
 Its derivative is \[
@@ -646,11 +698,9 @@ w_k&\text{ if }|\delta_k-d_k(Y)|<c,\\
 \end{cases}
 \]
 
-\sectionbreak
+\subsection{Gaussian Convolution}\label{gaussian-convolution}
 
-\section{Convolution}\label{convolution}
-
-In De Leeuw (\citeproc{ref-deleeuw_E_18f}{2018}) we also study the
+In De Leeuw (\citeproc{ref-deleeuw_E_18f}{2018}) we also used the
 convolution smoother proposed by Voronin, Ozkaya, and Yoshida
 (\citeproc{ref-voronin_ozkaya_yoshida_15}{n.d.}). The idea is to use the
 convolution of the absolute value function and a \emph{mollifier} as the
@@ -712,15 +762,28 @@ w(x)=\begin{cases}
 \end{cases}
 \]
 
+It is also clear that we can use any scale family of probability
+densities to define convolution smoothers. There is an infinite number
+of possible choices, with finite or infinite support, smooth or
+nonsmooth, using splines or wavelets, and so on.
+
 \sectionbreak
 
-\section{Tukey Loss}\label{tukey-loss}
+\subsection{Downweighters}\label{downweighters}
 
-\section{Welsch Loss}\label{welsch-loss}
+\subsection{Tukey Loss}\label{tukey-loss}
+
+\subsection{Welsch Loss}\label{welsch-loss}
 
 \[
 f(x)=1-\exp(-\{\frac{x}{c}\}^2)
-\] \# Cauchy Loss
+\]
+
+\[
+f'(x)=\frac{2}{c^2}\exp(-\{\frac{x}{c}\}^2)x
+\]
+
+\subsection{Cauchy Loss}\label{cauchy-loss}
 
 \[
 f(x)=\log(\{\frac{x}{c}\}^2+1)
@@ -731,21 +794,6 @@ f'(x)=\frac{1}{c^2}x\frac{1}{\{\frac{x}{c}\}^2+1}
 \] \[
 w(x)=\frac{1}{c^2}\frac{1}{\{\frac{x}{c}\}^2+1}
 \] which is non-increasing on \(\mathbb{R}^+\).
-
-\section{Barron Loss}\label{barron-loss}
-
-Not surprisingly there are a large number of generalizations of
-Huber-like losses in the engineering community, and in their maze of
-conference publications. Without having any confidence of selecting a
-representative sample from the literature, we mention and discuss Barron
-(\citeproc{ref-barron_17}{2017}) and Barron
-(\citeproc{ref-barron_19}{2019}). These papers also give a number of
-useful references.
-
-It is also clear that we can use any scale family of probability
-densities to define convolution smoothers. There is an infinite number
-of possible choices, with finite or infinite support, smooth or
-nonsmooth, using splines or wavelets, and so on.
 
 \section{Example}\label{example}
 
@@ -856,6 +904,16 @@ D66  6.17 5.47 4.67 6.13 6.04 7.42 6.36 7.36 0.00
 Fixed weights
 
 Tukey loss
+
+Minimize \[
+\sum w_k\ f(\delta_k-d_k(X))
+\] if \(f''(x)\leq K\).
+
+\[
+f(\delta_k-d_k(X))\leq f(\delta_k-d_k(Y))+f'(\delta_k-d_k(Y))(d_k(Y)-d_k(X))+\frac12K(d_k(Y)-d_k(X))^2
+\] Minimize \[
+\left[d_k(X)-\{d_k(Y))-K^{-1}f'(\delta_k-d_k(Y))\}\right]^2
+\]
 
 \section{Code}\label{code}
 
@@ -980,6 +1038,13 @@ Barron, J. T. 2017. {``A More General Robust Loss Function.''}
 Pattern Recognition}, 4331--39.
 \url{https://openaccess.thecvf.com/content_CVPR_2019/papers/Barron_A_General_and_Adaptive_Robust_Loss_Function_CVPR_2019_paper.pdf}.
 
+\bibitem[\citeproctext]{ref-charbonnier_blanc-feraud_aubert_barlaud_94}
+Charbonnier, P., L. Blanc-Feraud, G. Aubert, and M. Barlaud. 1994.
+{``{Two deterministic half-quadratic regularization algorithms for
+computed imaging}.''} \emph{Proceedings of 1st International Conference
+on Image Processing} 2: 168--72.
+\url{https://doi.org/10.1109/icip.1994.413553}.
+
 \bibitem[\citeproctext]{ref-degruijter_67}
 De Gruijter, D. N. M. 1967. {``{The Cognitive Structure of Dutch
 Political Parties in 1966}.''} Report E019-67. Psychological Institute,
@@ -999,6 +1064,10 @@ Lenski, and M. M. Richter, 308--24. Berlin: Springer Verlag.
 ---------. 2018. {``{MM Algorithms for Smoothed Absolute Values}.''}
 2018.
 \url{https://jansweb.netlify.app/publication/deleeuw-e-18-f/deleeuw-e-18-f.pdf}.
+
+\bibitem[\citeproctext]{ref-deleeuw_E_20b}
+---------. 2020. {``{Least Squares Absolute Value Regression}.''} 2020.
+\url{https://jansweb.netlify.app/publication/deleeuw-e-20-b/deleeuw-e-20-b.pdf}.
 
 \bibitem[\citeproctext]{ref-deleeuw_lange_A_09}
 De Leeuw, J., and K. Lange. 2009. {``Sharp Quadratic Majorization in One
